fix: adjust header vertical alignment

--- a/src/assets/style/header.css
+++ b/src/assets/style/header.css
@@ -2,6 +2,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    line-height: 0;
     position: fixed;
     top: .875rem;
     left: 50%;
